<resources>
    <string name="app_name">Список задач</string>
    <string name="action_settings">Settings</string>

    <string name="note_text">Введите текст заметки</string>
    <string name="note_text1">Введите текст описание</string>
    <string name="note_details_title">Заметка</string>
    <string name="save">Сохранить</string>
    <string name="completed">Выполнение</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">Все</string>
    <string name="progress">В прогрессе</string>
    <string name="completedmenu">Выполнено</string>
    <string name="todolist">Список задач</string>
    <string name="all_tasks">Все задачи</string>
    <string name="title_tv">Заголовок</string>
    <string name="description_tv">Описание</string>
    <string name="time_tv">Время</string>
    <string name="save_data">Save Data</string>
</resources>
